replace "YOUR-WATCHRTC-API-KEY" with "YOUR-REST-API-KEY"

--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
       const frameOrigin = "https://app.testrtc.com";
       // Use https://app.testrtc.com/frame/ instead of https://app.testrtc.com/app/ when embedding pages
       const frameSrc = `${frameOrigin}/frame/PAGE-PATH`;
-      const apiKey = "YOUR-WATCHRTC-API-KEY";
+      const apiKey = "YOUR-REST-API-KEY";
 
       let intervalId;
 
