add QUERY-PARAMETERS hint to frameSrc value

--- a/example.html
+++ b/example.html
@@ -19,7 +19,7 @@
       // Define the origin of the watchRTC frame
       const frameOrigin = "https://app.testrtc.com";
       // Use https://app.testrtc.com/frame/ instead of https://app.testrtc.com/app/ when embedding pages
-      const frameSrc = `${frameOrigin}/frame/PAGE-PATH`;
+      const frameSrc = `${frameOrigin}/frame/PAGE-PATH?QUERY-PARAMETERS`;
       const apiKey = "YOUR-REST-API-KEY";
 
       let intervalId;
